2007-02-15  Paolo Bonzini  <bonzini@gnu.org>

	* caller-save.c (save_call_clobbered_regs): Do not process sibcalls.
	
2007-02-15  Nick Clifton  <nickc@redhat.com>

	* varasm.c (default_asm_output_anchor): Prepend * to . symbol in
	order to prevent it from being munged by the target.

2007-02-15  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md: Remove misleading comment.

2007-02-15  Alexandre Oliva  <aoliva@redhat.com>

	* config/frv/frv.md (reload_incc, reload_outcc, reload_incc_uns,
	reload_outcc_uns, reload_incc_nz, reload_outcc_nz): Remove
	invalid patterns.

2007-02-15  Alexandre Oliva  <aoliva@redhat.com>

	* tree-sra.c (instantiate_missing_elements): Canonicalize
	bit-field types.
	(sra_build_assignment): New.
	(generate_copy_inout, generate_element_copy,
	generate_element_zero, generate_one_element_init): Use it.

2007-02-15  Alexandre Oliva  <aoliva@redhat.com>

	* tree-sra.c (instantiate_missing_elements): Canonicalize
	bit-field types.
	(sra_build_assignment): New.
	(generate_copy_inout, generate_element_copy,
	generate_element_zero, generate_one_element_init): Use it.

2007-02-15  Alexandre Oliva  <aoliva@redhat.com>

	* dwarf2out.c (dwarf2out_finish): Accept namespaces as context of
	limbo die nodes.

2007-02-14  Joseph Myers  <joseph@codesourcery.com>

	* emit-rtl.c (set_mem_attributes_minus_bitpos): Treat complex
	types as aggregates not scalars.
	* function.c (assign_stack_temp_for_type): Likewise.

2007-02-14  Roger Sayle  <roger@eyesopen.com>
	    Zdenek Dvorak  <dvorakz@suse.cz>

	* tree-dump.c (dump_switch_p_1): Require exact match of the option
	name.

2007-02-14  Zdenek Dvorak  <dvorakz@suse.cz>

	* passes.c (next_pass_1): Clear the next field of the copied
	pass structure.

2007-02-14  Richard Henderson  <rth@redhat.com>

	* tree-sra.c (early_sra): New.
	(decl_can_be_decomposed_p): Deny va_list if early_sra.
	(tree_sra_early, pass_sra_early): New.
	* tree-pass.h (pass_sra_early): Declare.