@@ -1,5 +1,17 @@
 2007-02-15  Paolo Bonzini  <bonzini@gnu.org>
 
+	* jump.c (get_label_after): Delete.
+	(get_label_before, delete_computation, delete_jump,
+	delete_prior_computation, follow_jumps): Move...
+	* reorg.c (delete_computation, delete_prior_computation): ... here...
+	(get_label_before, delete_jump): ... making these static ...
+	(follow_jumps): ... and simplifying this since it only runs after
+	reload.
+	* rtl.h (get_label_after, get_label_before, delete_jump,
+	follow_jumps): Delete prototypes.
+
+2007-02-15  Paolo Bonzini  <bonzini@gnu.org>
+
 	* caller-save.c (save_call_clobbered_regs): Do not process sibcalls.
 	
 2007-02-15  Nick Clifton  <nickc@redhat.com>
